fixes static form element alignment

--- a/src/indigo/less/forms.less
+++ b/src/indigo/less/forms.less
@@ -24,13 +24,7 @@ textarea.form-control {
     box-shadow: none;
     color: #bbb;
 }
-.form-control-static {
-    padding-top: 14px;
-    .label {
-        position: relative;
-        top: -3px;
-    }
-}
+
 .input-sm {
     height: 20px;
     padding: 15px;
